/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Patrick Iannini
 */
package ucf.assignments;

public class Controller {
    // Used for JavaFX controls. Buttons, menu, sliders.


}
