/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Patrick Iannini
 */
package ucf.assignments;

public class List {
    // Options selecting list + action
    void createList() {}
    void deleteList() {}
    void editList() {
        // editTitle
        // editDate
        // markListComplete
    } // -> task
}
