/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Patrick Iannini
 */
package ucf.assignments;

public class Menu {
    // Options for user
    /* Display all lists
        Needs to load lists and items. JSON file or Database?
        Menu could initially only display list titles then fetch items once list is clicked
     */
    void fetchData() {}
    // Create list(Button click) -> List
    void newList() {}
    // Delete list -> List
    void deleteList() {}
    // View/Edit list -> List
    void editList() {}

    // filtering
}
