/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Patrick Iannini
 */
package ucf.assignments;

public class Task {
    // Options for what to do to a list item
    void appendItem() {}
    void deleteItem() {}
    void markItemComplete() {}
    void changeDate() {} // Should both tasks and items have due dates?
}
